--- a/css/style.css
+++ b/css/style.css
@@ -4,41 +4,41 @@
 * This file contains the CSS for index.html
 */
 
+.mdl-layout__header-row {
+  justify-content: center;
+  padding: 0;
+}
+
 .mdl-layout__content {
   padding-left: 15pt;
   padding-right: 15pt;
   padding-top: 15pt;
 }
 
-/* Due to error in MDL : https://github.com/google/material-design-lite/issues/5281
-*/
-.mdl-ripple {
-  background: #000;
-  opacity: 0.001;
+.mdl-textfield__error {
+  color: #F00;
 }
 
-body {
-  background-color: rgb(176, 23, 253);
+.mdl-textfield--floating-label.is-focused .mdl-textfield__label,
+.mdl-textfield--floating-label.is-dirty .mdl-textfield__label,
+.mdl-textfield--floating-label.has-placeholder .mdl-textfield__label {
+  color: #929292;
 }
 
 .page-content {
-  color: rgb(0, 0, 0);
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 80px;
-  padding-top: 5pt;
+  color: #000;
+  font-family: "Times New Roman", Times, monospace;
+  font-size: 1.25rem;
   text-align: center;
+  display: block;
+  width: 100%;
+}
+
+body {
+  background-color: #a907f4;
 }
 
 img {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  height: 350px;
-}
-
-#result {
-  color: rgb(0, 0, 0);
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 30px;
-  text-align: center;
+  height: 200px;
+  width: 200px;
 }
